--- a/estoque-bar/style-index.css
+++ b/estoque-bar/style-index.css
@@ -14,10 +14,23 @@ body{
 
 .top-bar{
     width: 100%;
-    background: red;
+    background: rgb(40, 40, 40);
     min-height: 4rem;
     top: 0;
     position: fixed;
+    display: flex;
+    align-items: center;
+    color: white;
+}
+
+.top-bar a img{
+    padding: 1rem 1rem 1rem 2rem;
+    width: 5rem;
+}
+
+.side-bar a img{
+    padding: 0 1rem 0 1rem;
+    width: 5rem;
 }
 
 .side-bar{
@@ -26,34 +39,35 @@ body{
     left: 0;
     min-width: 15rem;
     max-width: 15rem;
-    background: red;
+    background: rgb(40, 40, 40);
     height: 100%;
     top: 0;
+    color: white;
+    display: flex;
 }
+
+
 .side-bar a {
     color: white;
     text-decoration: none;
-    padding: 1rem;
     display: block;
     font-size: 1rem;
     transition: 0.2s;
     cursor: pointer;
+    color: rgb(255, 255, 255);
+    padding: 1rem 1rem 1rem 1rem;
+    align-items: center;
+    display: flex;
 }
 
 .side-bar a:hover {
-    background: #00000042;
+    background: rgb(32, 32, 32);
 }
 
 aside{
-    justify-content: center;
-    top: 4rem;
     display: flex;
     flex-direction: column;
-    color: white;
-    text-decoration: none;
-    font-style: normal;
 }
-
 
 @media screen and (max-width: 768px) {
     .side-bar{
@@ -61,5 +75,8 @@ aside{
         min-width: 0;
         max-width: 0;
     }
-
+    .side-bar a {
+    display: none;
+    transition: 0.2s;
+    }
 }
